--- a/src/components/DashboardHome.css
+++ b/src/components/DashboardHome.css
@@ -157,7 +157,7 @@
 
 .widget-empty button:hover {
   background: #00d4ff;
-  color: black;
+  color: #0a0a0a;
 }
 
 /* Printers Widget */
